# mcp-sap-notes

./: .dockerignore  .env.example  DEBUG_OUTPUT_REFERENCE.md  Dockerfile  README.md  SAP_NOTE_SEARCH_FLOW.md  SPEC.md  agents.md  compose.yaml  debug-container.sh  deploy.sh  env.example  package-lock.json  package.json  pyproject.toml  start-debug-safe.sh
.claude/: settings.local.json
docs/: architecture.md  authentication.md  search-improvements.md  setup.md  tools.md
infra/aws/: cloudfront.tf  ecr.tf  main.tf  outputs.tf  secrets.tf  user_data.sh  variables.tf
py_src/mcp_sap_notes/: __init__.py  auth.py  azure_auth.py  config.py  credential_store.py  html_utils.py  sap_auth.py  sap_notes_api.py  server_core.py  server_http.py  server_stdio.py
src/: auth.ts  html-utils.ts  http-mcp-server.ts  mcp-server.ts  sap-notes-api.ts  types.ts
src/schemas/: sap-notes.ts
test/: test-auth.js  test-full-flow.js  test-mcp-server.js  test-sap-api.js
